--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="assets/css/DA_Whatsapp.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
@@ -43,9 +42,6 @@
 </head>
 
 <body>
-    <div class="page-loader page-loader-show" style="background: rgb(255,255,255);">
-        <div class="page-loader__spinner"><img class="img-fluid rubberBand animated infinite" src="assets/img/LOGO-180x180px.png"></div>
-    </div>
     <nav class="navbar navbar-light navbar-expand-md sticky-top shadow-lg py-3" style="background: #ffffff;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-xl bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon" style="background: url(&quot;assets/img/LOGO-180x180px.png&quot;) center / contain;margin-bottom: -20px;margin-top: -20px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-2">
@@ -54,7 +50,7 @@
                     <li class="nav-item text-end"><a class="nav-link active" href="#marcas"><strong>MARCAS</strong></a></li>
                 </ul><a class="btn btn-primary ms-md-2" role="button" href="#contactar" style="background: rgb(218,27,40);border-style: none;"><strong>CONTACTAR</strong></a>
                 <ul class="navbar-nav d-none d-md-flex align-items-start ms-auto">
-                    <li class="nav-item"><a class="nav-link active"><i class="fab fa-instagram" style="font-size: 30px;color: #da1b28;"></i></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="https://adkzl.page.link/instagram"><i class="fab fa-instagram" style="font-size: 30px;color: #da1b28;"></i></a></li>
                     <li class="nav-item"><a class="nav-link active"><i class="fab fa-facebook" style="font-size: 30px;color: rgb(218,27,40);"></i></a></li>
                     <li class="nav-item"><a class="nav-link active"><i class="fab fa-youtube" style="font-size: 30px;color: rgb(218,27,40);"></i></a></li>
                 </ul>
