--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>ADK – MAYORISTA DE AUTOPARTES Y PIEZAS AUTOMOTRIZ</title>
+    <meta property="og:type" content="article">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/LOGO-180x180px.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/LOGO-16x16px-(Propuesta-fondo-rojo).png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/LOGO-32x32px-(Propuesta-fondo-rojo).png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/LOGO-180x180px.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/LOGO-180x180px.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicons/LOGO-180x180px.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
