--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ window.onload = function()
 // Para Firefox
 document.onmousedown = function(){return false;}}
 </script>
+
+<script>
+document.oncontextmenu = function(){return false}
+</script>
 </head>
 
 <body>
