--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ document.oncontextmenu = function(){return false}
                 <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up" style="border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;">
                     <div class="card" style="border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;" src="assets/img/MARCAS/ADK--LUK.jpg"></div>
                 </div>
-                <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up"><a href="#" data-bs-target="#modal-3" data-bs-toggle="modal">
+                <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up"><a href="#" data-bs-target="#offcanvas-1" data-bs-toggle="offcanvas">
                         <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;" src="assets/img/MARCAS/ADK---FAG.jpg"></div>
                     </a></div>
                 <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up">
@@ -589,6 +589,16 @@ document.oncontextmenu = function(){return false}
                         <p>The content of your modal.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas-1">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title">ADK - Solicitud</h5><button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body" style="padding: 0px;">
+                <div class="ratio ratio-16x9" style="height: 100vh;"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc3i-pXeut5VKqC9ruHAYWOENo5XCExroQtHXLZptR9njFlLw/viewform?usp=sf_link"></iframe></div>
             </div>
         </div>
     </section>
