--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ document.oncontextmenu = function(){return false}
                 <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up" style="border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;">
                     <div class="card" style="border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;" src="assets/img/MARCAS/ADK--LUK.jpg"></div>
                 </div>
-                <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up"><a href="#" data-bs-target="#offcanvas-1" data-bs-toggle="offcanvas">
+                <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up"><a data-bs-target="#offcanvas-1" data-bs-toggle="offcanvas">
                         <div class="card"><img class="card-img-top w-100 d-block fit-cover" style="height: 200px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;" src="assets/img/MARCAS/ADK---FAG.jpg"></div>
                     </a></div>
                 <div class="col-6 col-md-4 col-xxl-3" data-aos="fade-up">
